--- a/popup.html
+++ b/popup.html
@@ -61,6 +61,17 @@
         <input type="text" id="facility-parent-company" placeholder="Start typing to search for parent companies">
         <div id="parent-company-suggestions" class="suggestions"></div>
       </div>
+      <div>
+  <label for="sourceUrl">Source Link:</label>
+  <input type="text" id="sourceUrl" name="sourceUrl">
+</div>
+
+<div>
+  <label for="retrievalTime">Time of Retrieval:</label>
+  <input type="text" id="retrievalTime" name="retrievalTime">
+</div>
+
+<button id="confirmButton">Confirm</button>
       <button id="submit-facility" class="submit-btn">Submit to Open Supply Hub</button>
       <div id="submit-status" class="status"></div>
     </div>
